# hanyang-hackaton

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX.md  README.md  USER_GUIDE.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml
apps/api/app/: __init__.py  config.py  domain.py  errors.py  guides.py  image_service.py  main.py  predictors.py  repository.py  schemas.py  spots.py
apps/api/models/: README.md  metadata.example.json
apps/api/scripts/: test_actual_model.py
apps/api/tests/: test_api.py  test_model_predictor.py
apps/mobile/: .env.example  app.json  eas.json  eslint.config.js  jest.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  capture.tsx  guide.tsx  history.tsx  index.tsx  preview.tsx  refine.tsx  result.tsx  search.tsx  spots.tsx
apps/mobile/components/: CollectionSpotCta.tsx  ui.tsx  (+1 more)
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
artifacts/: dataset-preflight.json
data/: README.md  collection-spots.ko.json  disposal-guides.ko.json
docs/: api.md  collection-spots.md  demo-script.md  deployment.md  device-qa.md  item-catalog.md  model-card.md  model-evaluation.md  onnx-evaluation.md  release-checklist.md  release-notes-v0.1.0.md  repository-size-cleanup.md  status-audit.md  troubleshooting.md
docs/model-results/: class-distribution.json  classification-report.json  metrics.json  onnx-evaluation.json
ml/: README.md  dataset.py  evaluate.py  export.py  export_onnx.py  metrics.py  modeling.py  onnx_evaluate.py  preflight.py  pyproject.toml  train.py
ml/tests/: test_dataset.py  test_onnx.py  test_smoke.py
scripts/: package-model-release.py  smoke-deployment.mjs  validate-guides.mjs  validate-spots.mjs
(+45 files in other folders)
