[project]
name = "bunrishot-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10,<4",
  "pillow>=11.3,<12",
  "scikit-learn>=1.7,<2",
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
]

[project.optional-dependencies]
onnx = [
  "onnx>=1.18,<2",
  "onnxruntime>=1.22,<2",
]

[dependency-groups]
dev = ["pytest>=8.4,<9", "ruff>=0.12,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
