[project]
name = "garbage-ai-api"
version = "0.1.0"
description = "분리샷 FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1,<1",
  "pillow>=11.3.0,<12",
  "pydantic-settings>=2.10.1,<3",
  "python-multipart>=0.0.20,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
model = [
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
]
dev = [
  "httpx>=0.28.1,<1",
  "mypy>=1.17.1,<2",
  "pytest>=8.4.1,<9",
  "ruff>=0.12.10,<1",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1",
  "mypy>=1.17.1,<2",
  "pytest>=8.4.1,<9",
  "ruff>=0.12.10,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "torchvision", "torchvision.*"]
ignore_missing_imports = true
